# soft_information_decoding

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  ETH_Presi_plot.ipynb  LICENSE  Pipfile  README.md  README_WINDOWS.md  UF_testing.ipynb  pre-push  pyproject.toml  requirements.txt  setup.py  test.ipynb  testing.ipynb  tox.ini
.Scratch/: 10-Oct_metadata.json  calibration_grid_metadata.json  deleted_metadata.json  grid_metadata.json  job_metadata copy.json  job_metadata.json  metadata.ipynb  qubit_coordinates.json  scratch_save.py
.Scratch/notebooks/: calib_data.ipynb  job_status_metadata.ipynb  metadata.ipynb  qubit_coordinates.ipynb
.Scratch/notebooks/others/: Kyoto_retrieve_jobs.ipynb  check_file_size.ipynb
.github/workflows/: ci copy.yml  ci.yml  ci_linux.yml  ci_macos.yml
C++/Getting_started/: cin.cpp  std_libs.cpp  var_types  var_types.cpp
C++/OOP/: OOP.cpp  abstraction  abstraction.cpp  polymorphism
C++/Python_interface/: testing_nb.ipynb
C++/cpp_probabilities/Software_dev/: cpp_get_counts.ipynb
Hardware Access Testing/: Data_order_.ipynb  Simulators.ipynb  get_job_data.ipynb
IQ Plane/Generate IQ.ipynb/: Gen. IQ from counts.ipynb  Gen_IQ_from_counts.ipynb
IQ Plane/Mock IQ/: AerIQHelper.py  Conrad Test.py  Conrad Test2.py  probabilities_test.ipynb
ResultsSaver/: __init__.py  dump.json  jobs.csv  tox.ini
ResultsSaver/result_saver.egg-info/: SOURCES.txt
ResultsSaver/result_saver/job/: saved_job.py
ResultsSaver/result_saver/json/: __init__.py  decoder.py
ResultsSaver/result_saver/provider/: saver_provider.py
UF/: ComparisonCounts.ipynb  graph_functions.py  hdrg_decoders_Commented.py  hdrg_decoders_comm.py  probabilities_functions.py  uf_intro.ipynb  uf_intro_IQPlane.ipynb
UF/UF_intro/: uf_intro_IQPlane.ipynb
UF/UF_weighted/: decoder_graph.ipynb  probabilities.ipynb  test_get_counts.ipynb
libs/: README.md
libs/PyMatching/DOTgit/: config
libs/PyMatching_old/: .gitignore
libs/PyMatching_old/DOTgit/: index  packed-refs
libs/PyMatching_old/Stim/: .gitignore
libs/ResultsSaver/: README.md  Untitled-1.ipynb  jobs.csv  pyproject.toml
libs/ResultsSaver/result_saver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/ArcCircuits/: data4maurice.ipynb  get_matching_graph.ipynb
notebooks/BSCode/Code_builder/: Qiskit_code_builder.ipynb  Stim_code_builder.ipynb  test.ipynb
notebooks/Bence/CX_transpilation/: bridge_optimization.ipynb
notebooks/Bence/IQ_ARC/: ArcParams_class.py  pipeline.ipynb  pipelineXflip.ipynb  utils.py
notebooks/Bence/STIM/: Add_error_channel_stim.ipynb
notebooks/Bence/meas_err_rate_decoding_rate/: RepCode_stim copy 2.ipynb  RepCode_stim copy.ipynb  RepCode_stim.ipynb  count_str.ipynb  extreme_no_resets copy 2.ipynb  extreme_no_resets copy.ipynb  simulator bence.ipynb  stim
notebooks/C++/Getting_started/: main.cpp
notebooks/C++/OOP/: inheriance.cpp  polymorphism.cpp
notebooks/C++/Python_interface/: testing_nb.ipynb
notebooks/C++/Windows_compat/: pybind_interface.ipynb
notebooks/Decoding/_Easter/: EASTER_decoding.ipynb  EASTER_infoPerfo.ipynb  EASTER_night_decoder.ipynb  EASTER_night_decoder_offset.ipynb  EASTER_night_decoder_optimized.ipynb  EASTER_night_decoder_switched.ipynb  GaussianKDE_decoding.ipynb
notebooks/Decoding/stim/: Testing_PyMatching.ipynb
notebooks/Hardware Access Testing/Couplingmap/: Cmap_to_layout.ipynb
notebooks/Hardware Access Testing/ResultSaver/: ResSaver_testing.ipynb
notebooks/Hardware_Access/Coupling_map/: transpile_rep_code.ipynb
notebooks/Hardware_Access/Couplingmap/: Cmap_to_layout.ipynb  transpile_rep_code.ipynb
notebooks/Hardware_Access/General/: Simulators.ipynb
notebooks/Hardware_Access/RepCode/: Data_Summary.ipynb  Data_Summary_SubSampling.ipynb  Internal_error.ipynb
notebooks/Hardware_Access/Runtime/: runtime_sampler.ipynb
notebooks/IQ Plane/: Convert_IQ.ipynb  plot_IQ_2.ipynb
notebooks/IQ Plane/KDE/: KDE_Hardware.ipynb  KDE_Jak.ipynb  KDE_test.ipynb
notebooks/IQ Plane/plot_IQ/: plot_IQ_2.ipynb
notebooks/IQ_Plane/KDE/: KDE_Hardware.ipynb  KDE_test.ipynb
notebooks/IQ_Plane/Mock IQ/: Conrad_test.ipynb
notebooks/IQ_Plane/estimate_IQ/: speed_scoring.ipynb
notebooks/IQ_Plane/plot_IQ/: plot_IQ_3.ipynb
notebooks/IQ_data/ANALYSIS_IQ/: RepCode_IQ_drift.ipynb  pSoft_IQ_Points.ipynb  pSoft_RepCode_stats.ipynb
notebooks/IQ_data/GAUSSIAN_leakage/: dev_GMM_pSoft&countMat.ipynb  dev_calib_fitting.ipynb
notebooks/IQ_data/Leakage/: GMM_leakage_postselection.ipynb  KDE_leakage_postseleciton.ipynb  Leakage analysis.ipynb  boundary_nodes.ipynb
notebooks/IQ_data/Mock IQ/: Conrad_Test.py  probabilities_test.ipynb
notebooks/IQ_data/PostSelection/: dev_PostSelection.ipynb  dev_fit_1D_gaussians.ipynb  htu_PostSelection.ipynb  plot_postSelection.ipynb
notebooks/IQ_data/TF/: getting_started.ipynb
notebooks/IQ_data/plot_IQ/: Plot_IQ.ipynb
notebooks/Nazca/: get_IQ_calibration_data.ipynb
notebooks/Plotting/: presentation_plots_jan_23.ipynb
notebooks/Probabilities/Gaussians/: fit_gaussian.ipynb  generate_grid.ipynb
notebooks/Probabilities/KDE/: Decision_boundary_KDE.ipynb  KDE_Hardware.ipynb
notebooks/Simulator/: IQ_data_extreme(7,7,1e4).pkl  htu_simulator.ipynb  qubit_mapping(7,7).pkl  qubit_mapping.pkl  resets_vs_no_resets.ipynb  stim_circ.pkl
notebooks/UF/: graph_functions.py  plot_functions.py  test.ipynb
notebooks/pymatching/: parity_check_matrix.ipynb
notebooks/stim/: Testing_PyMatching.ipynb  generate_graph.ipynb
scripts/: Dockerfile  remove_ignored_files.sh  runner.sh
src/: cpp_soft_info.cp311-win_amd64.pyd
src/Scratch/: __init__.py  calibration_data.py  core.py  metadata.py  metadata_saver.py  monitor_job.py  qubit_coordinates.py
src/cpp/: __init__.py  bindings.cpp  example.cpp  helper_probabilities.py  probabilities.cpp
src/cpp_soft_info/: cpp_soft_info.cp311-win_amd64.pyd
src/soft_info/: __init__.py
test_omp/: test  test.cpp
tests/Scratch/: test_calibration_data.py  test_core.py  test_metadata.py  test_qubit_coordinates.py
tests/cpp/: test_probabilities.py
(+540 files in other folders)
